[package]
name = "ldtstore-codegen"
version = "0.1.0"
edition = "2021"

[lib]
name = "ldtstore_codegen"
path = "lib.rs"

[[example]]
name = "ldtstore-codegen"
path = "main.rs"

[dependencies]
concat-string = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde-enum-str = "0.2"
indexmap = { version = "1.9", features = ["serde"] }
lighthtml = { path = "../../Berylsoft/lighthtml" }

[dev-dependencies]
serde_json = "1.0"
serde_yaml = "0.9"
