[package]
name = "ldtstore-codegen"
version = "0.1.0"
edition = "2021"
authors = ["stackinspector"]
license = "MPL-2.0"
repository = "https://github.com/stackinspector/ldtstore-codegen"

[lib]
name = "ldtstore_codegen"
path = "lib.rs"

[[example]]
name = "ldtstore-codegen"
path = "main.rs"

[dependencies]
concat-string = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
serde_json = "1.0"
serde_yaml = "0.9"
indexmap = { version = "1.9", features = ["serde"] }
lighthtml = { path = "../../Berylsoft/lighthtml" }

[dev-dependencies]
argh = "0.1"
parcel_css = "1.0.0-alpha.32"
